@@ -27,6 +27,8 @@ for syslog like log levels. (log-level config option) Replace use of select(2)
 with poll(2), to fix `Bad file descriptor' error on very busy servers (thanks
 to Arkadiusz Miskiewicz for this patch). Added mailspool-no-dotfile-locking
 option to switch off dot-locks at runtime (useful for sites using quotas).
+Added domain-separators option to make former DOMAIN_SEPARATORS from util.h
+configurable.
 
 1.5.3
 
